jena-shex/src/test/files/shexTest/negativeStructure/ExtendsWithOr2.shex
<http://a.example/S1> {<a> .} OR {<b> .}
<http://a.example/S2> EXTENDS @<http://a.example/S1> {}

